# ChangeLog for dev-lisp/clisp
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/clisp/ChangeLog,v 1.102 2010/06/26 13:03:04 nixnut Exp $

  26 Jun 2010; <nixnut@gentoo.org> clisp-2.48-r1.ebuild:
  ppc stable #322599

  20 Jun 2010; Raúl Porcel <armin76@gentoo.org> clisp-2.48-r1.ebuild:
  alpha/ia64 stable wrt #322599

  17 Jun 2010; Patrick Lauer <patrick@gentoo.org> clisp-2.47-r1.ebuild,
  clisp-2.48-r1.ebuild, clisp-2.48-r2.ebuild:
  Migrating away from deprecated postgres virtuals

  03 Jun 2010; Markus Meier <maekke@gentoo.org> clisp-2.48-r1.ebuild:
  amd64/x86 stable, bug #322599

*clisp-2.48-r2 (03 Jun 2010)

  03 Jun 2010; Tomas Touceda <chiiph@gentoo.org> +clisp-2.48-r2.ebuild:
  CLisp supports db:4.7, update dependency.

  14 Apr 2010; Tomas Touceda <chiiph@gentoo.org> -clisp-2.48.ebuild:
  Cleanup old testing ebuild

*clisp-2.48-r1 (14 Apr 2010)

  14 Apr 2010; Tomas Touceda <chiiph@gentoo.org> +clisp-2.48-r1.ebuild:
  Revition bump, added berkeley-db and threads support.

  29 Jul 2009; Marijn Schouten <hkBst@gentoo.org> clisp-2.48.ebuild:
  some small improvement

  29 Jul 2009; Marijn Schouten <hkBst@gentoo.org> -clisp-2.43-r1.ebuild,
  -clisp-2.44.1.ebuild, -clisp-2.44.1-r1.ebuild, -clisp-2.46.ebuild,
  -clisp-2.47.ebuild:
  remove old versions

*clisp-2.48 (29 Jul 2009)

  29 Jul 2009; Marijn Schouten <hkBst@gentoo.org> +clisp-2.48.ebuild:
  bump, should fix bug 257348 and bug 267784

  17 Jan 2009; nixnut <nixnut@gentoo.org> clisp-2.47-r1.ebuild:
  ppc stable #246074

  10 Jan 2009; Raúl Porcel <armin76@gentoo.org> clisp-2.47-r1.ebuild:
  alpha/ia64 stable wrt #246074

  10 Jan 2009; Markus Meier <maekke@gentoo.org> clisp-2.47-r1.ebuild:
  amd64/x86 stable, bug #246074

  08 Jan 2009; Marijn Schouten <hkBst@gentoo.org> +files/pari.patch,
  clisp-2.47-r1.ebuild:
  fix pari doesn't compile

*clisp-2.47-r1 (07 Jan 2009)
