@@ -4,8 +4,8 @@ AUX 2.41-linux-headers.patch 1444 RMD160 609c269738a096cf2120c65fe1979d6c5a775c6
 AUX pari.patch 885 RMD160 ddbc96af09a7226de3aae5b7f53568f31e9e28d3 SHA1 7e6d5a7574d3266cc75d02dd8f8de8d2ae4785e7 SHA256 3283c5ada9664925617e9b41deb2b7bda5961ff9237ff0d1144b36db4c953b4e
 DIST clisp-2.47.tar.bz2 7543689 RMD160 d376b0b16694bbaf60e61fc3465bfcdf5770e093 SHA1 63749bf07409cee134c195547e6d911554b619d6 SHA256 565256a50caca44a969b7440c986b3203a0b9679babd0f1dbcbc61a4f4622edb
 DIST clisp-2.48.tar.bz2 7885098 RMD160 01c150ebd1e44e627f41de9cdc84b90267185a70 SHA1 dc213ed02194ec4c8b596118c5f92b25d1f540e0 SHA256 05b83f560859a23679ccfc073a128a5377fe9489d734431a3dc32ef88f0c3dc2
-EBUILD clisp-2.47-r1.ebuild 4244 RMD160 32b6955abee51be1c05db07649b7c6179be26411 SHA1 a62ad052606835e18c88c6aa857a7a274c17b1ed SHA256 7d431fae50a327e265be5782b96aad9184333b4e988c93daa3498c77e14730e0
-EBUILD clisp-2.48-r1.ebuild 4958 RMD160 cca3d0c622b8bfb44bd044eb4872fb417d18b9b5 SHA1 93ad9df2e6ed51150038c5a62b03fdfa7be74ada SHA256 c19c1f312ae54eb3dc4c12833ec77f1aa8635821effcb3159255b3cd08c58433
-EBUILD clisp-2.48-r2.ebuild 4912 RMD160 abaf7f6dd9d3bcf1208d2c16b19c1db1b6691deb SHA1 74edd7aa4b329ef9f79bf11f982af4a4b4f3318b SHA256 b6f11ec05cf2d69a38050b7f3b988f08ec4b69ccc9130f6b402af22c9219a537
-MISC ChangeLog 24132 RMD160 8057442a29669bf198f8a92188b7f810f607236e SHA1 1489c480c61b3dcc5f710dabad65a3def4ffce6a SHA256 b96b5845bdcdcb45a25f4e5d1b4b36e4fd19b89a3a2004ea714b55389bd666db
+EBUILD clisp-2.47-r1.ebuild 4210 RMD160 506f11c716f9de9ce4a1071f1ec13b85ba184054 SHA1 4c758a913d2adec7e4e46fa7abd95c39f870247f SHA256 8df114c9aeda7069fa254133b4fdd59c580c425a5513571bae280153857f5d27
+EBUILD clisp-2.48-r1.ebuild 4925 RMD160 f04ba129ab1a1b34b3dc371afe282a18bcfc06be SHA1 db9bc521c556293fc30a1e0919acbdf2a5740f3a SHA256 5b0dca681f366b9425d99fe14aff636f897a127569b09356bddaf2cca90a84c8
+EBUILD clisp-2.48-r2.ebuild 4878 RMD160 fdbf1b99abfe78d2faab553b0b99444f4cf23d61 SHA1 d7ecbad21a30688d96ebffa3c4b71d0035927f37 SHA256 94d3ba2221e4203c75dad9c95487d1c76c831049e1fcf0185b92b8b262eaa8a4
+MISC ChangeLog 24302 RMD160 b3e2056722a3c819dcfef76e32c4254afeb3bc17 SHA1 5d9357515b4e070940c59450cc380822217c1473 SHA256 3d85ec5ad5ebec577f6891522928cce4812fadf5bed00a21f7b4c4390d72e29a
 MISC metadata.xml 1264 RMD160 919dd3d373822e37d5c9c3556eddfa32101c559f SHA1 809e0602f6c76e269a0c0eee612297fdfed389c6 SHA256 971d7ef431c0a5fc95a4366c07220c32db56aa3d22960dc8acb77d7110db10dc
