@@ -1,6 +1,10 @@
 # ChangeLog for dev-lisp/clisp
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/clisp/ChangeLog,v 1.102 2010/06/26 13:03:04 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/clisp/ChangeLog,v 1.103 2010/12/17 20:17:25 ulm Exp $
+
+  17 Dec 2010; Ulrich Mueller <ulm@gentoo.org> clisp-2.47-r1.ebuild,
+  clisp-2.48-r1.ebuild, clisp-2.48-r2.ebuild:
+  Remove PROVIDE, commonlisp is now a new-style virtual.
 
   26 Jun 2010; <nixnut@gentoo.org> clisp-2.48-r1.ebuild:
   ppc stable #322599
